syntax = "proto3";

package com.github.badsyntax.gradletasks.messages.server;
option java_package = "com.github.badsyntax.gradletasks.messages.server";
option java_multiple_files = false;
option java_outer_classname = "ServerMessage";

message ActionCancelled {
  string message = 1;
  string source_dir = 2;
  string task = 3;
}

message Progress {
  string message = 1;
}

message RunTask {
  string message = 1;
  string task = 3;
}

message OutputChanged {
  enum OutputType {
    STDERR = 0;
    STDOUT = 1;
  }

  string message = 1;
  OutputType output_type = 3;
}

message Error {
  string message = 1;
}

message Info {
  string message = 1;
}

message Tasks {
  string message = 1;
  repeated GradleTask tasks = 2;
}

message GradleTask {
  string name = 1;
  string group = 2;
  string path = 3;
  string project = 4;
  string buildFile = 5;
  string rootProject = 6;
  string description = 7;
}

message Message {
  oneof kind {
    ActionCancelled action_cancelled = 1;
    Progress progress = 2;
    RunTask run_task = 3;
    OutputChanged output_changed = 4;
    Error error = 5;
    Info info = 6;
    Tasks get_tasks = 7;
  }
}
